# cline

./: .changie.yaml  .claude_prompts.example.json  .clineignore  .clinerules  .codespellrc  .dockerignore  .editorconfig  .env.e2e  .env.example  .env.integration.example  .env.sample  .eslintrc.complexity.json  .eslintrc.json  .git-blame-ignore-revs  .gitattributes  .gitconfig  .gitignore  .gitleaks.toml  .gitmodules  .mocharc.json  .npmignore  .npmrc  .nycrc.integration.json  .nycrc.json  .nycrc.unit.json  .posthogignore  .posthogrules  .pr_summary.md  .prettierignore  .prettierrc.json  .roomodes  .tool-versions  .vscode-test.mjs  .vscodeignore  .worktreeinclude  0001-feat-Add-macro-buttons-feature-above-chat-input.patch  AACA.md  ACCOUNT_TOGGLE_IMPROVEMENTS.md  AGENTS.md  AIHUBMIX_INTEGRATION.md  (+311 more)
.aihydrorules/: AIHydro-overview.md  correct-tools.md  protobuf-development.md  research.md  tools.md
.beadsmithrules/: beadsmith-overview.md  general.md  network.md  protobuf-development.md
.changes/: v0.1.0.md
.changeset/: .ignore_force_update  .mighty-tools-remain.md  3.25.7.md  accessibility-utils.md  accumulative-read-approval-list.md  add-avian-provider.md  add-brainiall-provider.md  add-glm-5-model.md  add-gpt-5-2-codex-openai.md  add-mcp-prompts-support.md  add-opus-4-1-model.md  add-skills-system.md  add-zai-glm-4-7-cerebras.md  afraid-clouds-push.md  afraid-experts-beg.md  afraid-items-help.md  afraid-jobs-sing.md  afraid-maps-wave.md  afraid-pillows-kiss.md  angry-ducks-dress.md  angry-ghosts-bake.md  angry-lions-sneeze.md  angry-meals-perform.md  angry-terms-mate.md  angry-wolves-repeat.md  api-configuration-profiles.md  auto-approve-docs-update.md  auto-approve-new-task.md  automatic-releases-publish.md  automatic-tags-publish.md  background-terminal-tracking.md  baseline-no-avx2-fix.md  bcline-v347-updates.md  bedrock-empty-description-fix.md  bedrock-parallel-tool-calling.md  bedrock-vpc-endpoint.md  beige-bobcats-watch.md  beige-cars-drive.md  beige-dingos-heal.md  beige-drinks-chew.md  (+2085 more)
.claude/: launch.json  settings.json  settings.local.json
.github/scripts/: README.md  ai-release-notes.py  ai_release_notes.py  analyze-complexity.js  complexity-analysis.js  conftest.py  coverage.py  generate_release_notes.py  get_prev_version_refs.py  overwrite_changeset_changelog.py  parse_changeset_changelog.py  pyproject.toml  release-notes-prompt.py  release_notes_prompt.py  requirements.txt  test_generate_release_notes.py  test_integration.py  test_overwrite_changelog.py  test_version_manager.py  version_manager.py
.github/scripts/coverage/: __init__.py  extraction.py  github_api.py  main.py  workflow.py
.github/scripts/coverage_check/: __init__.py  __main__.py  extraction.py  github_api.py  util.py  workflow.py
.github/scripts/tests/: coverage_check_test.py  test_coverage.py
apps/examples/desktop-app/src-tauri/: Cargo.toml  entitlements.plist  tauri.conf.json  tauri.release.conf.json
apps/examples/desktop-app/src-tauri/capabilities/: default.json
apps/examples/desktop-app/src-tauri/icons/: icon.icns
apps/examples/desktop-app/src-tauri/src/: main.rs
dag-engine/: README.md  pyproject.toml
dag-engine/beadsmith_dag/: __init__.py  analyser.py  models.py  server.py
dag-engine/beadsmith_dag/graph/: __init__.py  builder.py  queries.py
dag-engine/beadsmith_dag/parsers/: __init__.py  js_parser.py  python_parser.py
dag-engine/js-parser/: package-lock.json  package.json  parser.js
dag-engine/tests/: __init__.py  conftest.py  test_js_parser.py  test_python_parser.py
sdk/apps/code/src-tauri/: Cargo.toml  tauri.conf.json
sdk/apps/code/src-tauri/src/: main.rs
(+12616 files in other folders)
