[project]
name = "beadsmith-dag-engine"
version = "0.1.0"
description = "Dependency graph analysis engine for Beadsmith"
requires-python = ">=3.12"
license = { text = "Apache-2.0" }
authors = [{ name = "Beadsmith Team" }]
readme = "README.md"

dependencies = [
    "networkx>=3.4",
    "pydantic>=2.10",
    "structlog>=24.4",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.8",
    "mypy>=1.13",
]

[project.scripts]
beadsmith-dag = "beadsmith_dag.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["beadsmith_dag"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "TCH"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
